YourSavedInfo: Fix misalignment of add buttons and headers on leaf pages
This fix was discussed with UX.

Before: https://screenshot.googleplex.com/58j3rHSgggkJhro
After: https://screenshot.googleplex.com/5mfR2cq2VzJVT4c

Bug: 433613156
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7031905
Commit-Queue: Stanislav Mikheyev <mikhe@google.com>
Cr-Commit-Position: refs/heads/main@{#1530170}

--- a/chrome/browser/resources/settings/autofill_page/your_saved_info_shared.css
+++ b/chrome/browser/resources/settings/autofill_page/your_saved_info_shared.css
@@ -13,3 +13,9 @@
   box-shadow: var(--cr-card-shadow);
   margin-top: var(--cr-section-vertical-margin);
 }
+
+.card h2 {
+  align-self: auto;
+  padding-bottom: 0;
+  padding-top: 12px;
+}
